--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,3 +1,4 @@
+---
 name: Deploy website
 on:
   push:
@@ -25,9 +26,18 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: |
+            dist
+            package.json
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Deploy
         run: echo "Deploying..."
+...
